--- a/.github/workflows/CF.yml
+++ b/.github/workflows/CF.yml
@@ -57,7 +57,7 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
           ./node_modules/.bin/sonar-scanner \
-            -Dsonar.projectKey=Cold_Fusion_Project \
+            -Dsonar.projectKey=CF-Updated \
             -Dsonar.organization=ilayarajac515 \
             -Dsonar.sources=. \
             -Dsonar.host.url=https://sonarcloud.io \
@@ -91,15 +91,15 @@ jobs:
       -  name: build docker image
          run:  |
             ls -l
-            docker build -t cold_fusion_app1:latest /home/runner/work/CF-Updated/CF-Updated
+            docker build -t cold_fusion_app2:latest /home/runner/work/CF-Updated/CF-Updated
 
       - name: Login to DockerHub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
       - name: Push Docker Image
         run: |
-          docker tag cold_fusion_app1:latest ${{ secrets.DOCKER_USERNAME }}/cold_fusion_app1:latest
-          docker push ${{ secrets.DOCKER_USERNAME }}/cold_fusion_app1:latest
+          docker tag cold_fusion_app1:latest ${{ secrets.DOCKER_USERNAME }}/cold_fusion_app2:latest
+          docker push ${{ secrets.DOCKER_USERNAME }}/cold_fusion_app2:latest
 
       # - name: Set up kubeconfig
       #   run: |
